# dev-kid

./: .gitignore  ADVERSARIAL_TEST_REPORT.md  AGENT_GUIDE.md  API.md  ARCHITECTURE_DATA_FLOW.md  ARCHITECTURE_REVIEW_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_REFERENCE.md  CONSTITUTION_MANAGEMENT_DESIGN.md  CONTEXT_COMPACTION_STRATEGY.md  CONTEXT_COMPRESSION_GAP.md  DEV_KID.md  FIXES_APPLIED.md  HOOKS_IMPLEMENTATION_SUMMARY.md  HOOKS_REFERENCE.md  INSTALLATION.md  INTEGRATION_GUIDE.md  PATH_BUGS_FIXED.md  PROACTIVE_PRECOMPACT_SUMMARY.md  QUICKSTART.md  RALPH_OPTIMIZATIONS.md  RALPH_QUICK_FIX_GUIDE.md  RALPH_SAFEGUARDS.md  README.md  SECURITY_FIXES_CHECKLIST.md  SECURITY_STATE_AUDIT.md  SECURITY_STATE_EXECUTIVE_SUMMARY.md  SKILLS_REFERENCE.md  SPECKIT-004-COMPLETION-REPORT.md  SPECKIT-005-VERIFICATION.md  SPECKIT_DEVKID_INTEGRATION_GUARANTEE.md  SPECKIT_INTEGRATION_EXECUTION_PLAN.json  STATE_FILES_REFERENCE.md  TASK_LEVEL_AGENTS.md  TASK_WATCHDOG_ARCHITECTURE_GAP_ANALYSIS.md  WORKFLOW_COMPLETE.md  dev-kid.yml  execution_plan.json  install  (+6 more)
.devkid/: config.json
cli/: CONSTITUTION_VALIDATION_REFERENCE.md  (+24 more)
rust-watchdog/: .gitignore  Cargo.toml  README.md  REBRANDING_EXECUTION_PLAN.json  build.sh
rust-watchdog/docs/: SECURITY-002-PATH-VALIDATION-REPORT.md  WAVE1_PYTHON_CHANGES.md
rust-watchdog/memory-bank/: CLAUDE.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
rust-watchdog/src/: docker.rs  lib.rs  main.rs  process.rs  registry.rs  types.rs
rust-watchdog/tests/: security_test.rs  test_path_validation.rs
(+198 files in other folders)
